--- a/project/build.properties
+++ b/project/build.properties
@@ -1,5 +1,5 @@
 #Project properties
-#Wed Jul 14 15:26:15 PDT 2010
+#Thu Dec 16 10:58:36 PST 2010
 project.organization=com.twitter
 project.name=streamyj
 sbt.version=0.7.4
