--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Thu Dec 16 11:02:56 PST 2010
+#Mon Dec 27 13:50:34 EST 2010
 project.organization=com.twitter
 project.name=streamyj
 sbt.version=0.7.4
-project.version=0.2.1-SNAPSHOT
+project.version=0.2.1
 build.scala.versions=2.8.1 2.7.7
 project.initialize=false
