--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Mon Dec 27 13:52:24 EST 2010
+#Wed Jun 01 10:37:39 PDT 2011
 project.organization=com.twitter
 project.name=streamyj
 sbt.version=0.7.4
-project.version=0.2.2-SNAPSHOT
+project.version=0.3.0-SNAPSHOT
 build.scala.versions=2.8.1 2.7.7
 project.initialize=false
